--- a/index.html
+++ b/index.html
@@ -93,11 +93,15 @@
             <span class="author-block"><sup>2</sup>Google</span>
             <span class="eql-cntrb"><small><br><sup>&dagger;</sup>Co-corresponding Authors</small></span>
           </div>
-          <!-- <div class="is-size-5 publication-authors">
-            <span class="author-block">
-              <a href="https://miil.korea.ac.kr/">MIIL</a>
-            </span>
-          </div> -->
+          <div style="display: flex; justify-content: center; align-items: center;">
+            <a href="https://www.korea.edu/sites/en/index.do" target="_blank">
+              <img src="./static/images/ku-logo.png" alt="korea" style="height: 50px; margin-right: 60px;">
+            </a>
+            <a href="https://miil.korea.ac.kr/" target="_blank">
+              <img src="./static/images/miil.png" alt="miil" style="height: 54px; margin-right: 50px;">
+            </a>
+            <img src="./static/images/Google_2015_logo.svg.webp" alt="google" style="height: 50px;">
+          </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
