--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                   <span>Paper</span>
                 </a>
               </span>
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://arxiv.org/abs/2502.06139"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -123,7 +123,7 @@
                   </span>
                   <span>arXiv</span>
                 </a>
-              </span>
+              </span> -->
               <span class="link-block">
                 <a href="https://github.com/ssuminan/LCIRC"
                    class="external-link button is-normal is-rounded is-dark">
